feat: search user based on email
